Fixed some z-index issues, added SHIFT clip constraint, fixed a few JavaScript issues.

--- a/src/timeline/media/css/main.css
+++ b/src/timeline/media/css/main.css
@@ -17,7 +17,7 @@ body {
 
 .ui-selectable-helper{
   position:absolute;
-  z-index:99999;
+  z-index:9998;
   border:1px solid #2a82da;
   background-color: #2a82da;
   opacity: 0.4;
@@ -54,7 +54,7 @@ img {
 .clip_effects {border:1px solid #000; text-align:center; width:20px; font-size:14px; padding:1px; font-weight:bold; float:left; margin-left:2px; margin-right:2px; margin-top:2px; cursor:default; background: rgba(54, 25, 25, .2); overflow:hidden;line-height:15px;height:15px;border-top-left-radius: 6px; border-bottom-left-radius: 6px;border-top-right-radius: 6px; border-bottom-right-radius: 6px;}
 .effect_icon {margin-left:1px;margin-right:1px;}
 
-.clip { color: #fff; min-width:0px; height: 64px; position: absolute; margin-top:2px; left: 100px; font-family: Sans; font-size: 9pt; background-color: #ef7f00; background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(82,82,82,1)), color-stop(100%,rgba(34,38,40,1))); border-radius: 8px; border: 1px solid #4b92ad; border-left: 2px solid #4b92ad; border-right: 2px solid #4b92ad; }
+.clip { z-index:8000; color: #fff; min-width:0px; height: 64px; position: absolute; margin-top:2px; left: 100px; font-family: Sans; font-size: 9pt; background-color: #ef7f00; background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(82,82,82,1)), color-stop(100%,rgba(34,38,40,1))); border-radius: 8px; border: 1px solid #4b92ad; border-left: 2px solid #4b92ad; border-right: 2px solid #4b92ad; }
 .left_edge_stop { border-left: 2px solid #4b92ad; }
 .right_edge_stop { border-right: 2px solid #4b92ad; }
 .highlight_clip { border-color: #32b7ea; }
@@ -85,7 +85,7 @@ img {
 
 /* Transitions */
 .transition_top {}
-.transition { color: #fff; min-width:0px; height: 64px; position: absolute; margin-top:2px; left: 100px; font-family: Sans; font-size: 9pt; background-color: #0192c; background: -webkit-linear-gradient(top, #0192c1 0%,#3fa1bf 100%); border-radius: 8px; border: 1px solid #0192c1; border-left: 2px solid #0192c1; border-right: 2px solid #0192c1; background-image: url(../images/transition.png); background-repeat: no-repeat; background-position: center; background-size: 100% 66px; opacity:0.75; }
+.transition { z-index:8500; color: #fff; min-width:0px; height: 64px; position: absolute; margin-top:2px; left: 100px; font-family: Sans; font-size: 9pt; background-color: #0192c; background: -webkit-linear-gradient(top, #0192c1 0%,#3fa1bf 100%); border-radius: 8px; border: 1px solid #0192c1; border-left: 2px solid #0192c1; border-right: 2px solid #0192c1; background-image: url(../images/transition.png); background-repeat: no-repeat; background-position: center; background-size: 100% 66px; opacity:0.75; }
 .transition_menu {float:left;margin-top:4px;margin-left:4px;margin-right:4px;width:12px;height:12px;background-image: url(../images/menu.png);}
 .transition_label {float:left; padding-top: 2px; width:50px; margin-left: 2px; color:#fff;font-weight:bold;}
 .highlight_transition { border-color: #32b7ea; }
